Milestone 1: clean and harden Spring Security baseline